--- a/ex004/video1.html
+++ b/ex004/video1.html
@@ -22,9 +22,14 @@
             color:white;
             font-size: 25px;
         }
+        .oi a{
+            margin: auto;
+            text-align: center;
+            display: block;
+        }
         .butao{
             max-width: 80px;
-            margin-left: 600px;
+            margin: auto;           
         }
     </style>
 </head>
