--- a/ex013/index.html
+++ b/ex013/index.html
@@ -6,44 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de background</title>
     <style>
+        @font-face {
+            font-family: 'Old';
+            src: url('./fontes\ de\ desabafo/OldLondon.ttf') format('truetype'), url('./fontes\ de\ desabafo/OLondon_.otf') format('opentype');
+        }
         *{
             padding:0;
             margin: 0;
             border:none;
             box-sizing: border-box;
         }
+        p{
+            text-indent: 50px;
+            margin: 5px;
+        }
         main{
-            width:500px;
+            max-width:700px;
+            min-width: 100px;
             margin:auto;
             text-align: justify;
             border-style: solid;
             padding:10px;
-            background-color: white;          
+            background-color: white;   
+            border-radius: 30px;       
         }
         body{
-            height:100vh;
+            font-family: 'Old', sans-serif;
+            height:130vh;
             background-color: black;
             background-image: url('./imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-        }
-         div{
-            width: 100px;
-            height:100px;
-            background-color: aqua;
-            position:relative;
-            margin:auto;
+            background-attachment: fixed;
+        }         
+        img{
+            width:100%;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Estudo de background</h1>
+        <img src="./imagens/inglaterra-nueva-inglaterra-el-retorno-del-mayflower-a-inglaterra-1891-impresion-antigua-t2kbfy.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
-       
-    </main>  <div>
-yfjytuyt
-        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <img src="./imagens/ilustração-antiga-da-cena-histórica-cidade-do-sudeste-inglaterra-gravura-início-século-xix-na-de-ashford-kent-england-imagem-206791482.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <img src="./imagens/ilustração-antiga-da-paisagem-histórica-de-cidades-do-sudeste-inglaterra-gravura-início-século-xix-um-campo-vizinho-estrada-205538647.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora omnis quam iste sapiente consectetur ducimus odit modi perferendis deserunt, quas enim, recusandae consequuntur error tempore temporibus nemo necessitatibus ullam! Nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, impedit. Commodi iusto aliquid molestiae, numquam aperiam quos. Ea ad, aspernatur aliquam nobis similique nam saepe natus! Nihil illo sapiente Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores assumenda non natus dolorum, quis illum eum eaque fugiat, laborum iste ipsum facere provident excepturi possimus repudiandae eveniet, molestias doloribus odit.</p>
+    </main> 
 </body>
 </html>
