--- a/Desafios/d004/index-2.0.html
+++ b/Desafios/d004/index-2.0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>centro com 1 img e bg-img</title>
     <style>
         *{
             padding:0;
@@ -14,14 +14,20 @@
         }
         body{
             height:100vh;
-            background-image: url(./imagens/astronauta.png);
-            background-size: 100px;
+            background-image: url(./imagens/espaco.jpg);
+            background-size:cover;
             background-position: center center;
             background-repeat:no-repeat;
+        }
+        img{
+            position: absolute;
+            left:50%;
+            top:50%;
+            transform: translate(-50%,-50%);
         }
     </style>
 </head>
 <body>
-    
+    <img src="./imagens/astronauta.png" alt="astronauta ">
 </body>
 </html>
