--- a/ex014/index3.0.html
+++ b/ex014/index3.0.html
@@ -13,10 +13,18 @@
         table{
             border-collapse: collapse;
             width:300px;
+            padding:200px;
+            margin: 80px;
         }
         td {
             border-style: solid;
             border-color: black;
+            margin:5px;
+            width:150;
+        }
+        #tb2 {
+            border-collapse: collapse;
+            width:400px;
         }
     </style>
 </head>
@@ -38,6 +46,58 @@
         </tr>
         <tr>
             <td colspan="2">L</td>
+        </tr>
+    </table>
+    <table id="tb2">
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td rowspan="2">3</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td colspan="3">8</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td rowspan="2">10</td>
+            <td colspan="2">11</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>14</td>
+            <td>15</td>
+        </tr>
+    </table>
+    <table id="tb2">
+        <tr>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
+        </tr>
+        <tr>
+            <td rowspan="4">C</td>
+            <td>D</td>
+            <td>E</td>
+            <td>F</td>
+        </tr>
+        <tr>
+            <td>G</td>
+            <td>H</td>
+            <td>I</td>
+        </tr>
+        <tr>
+            <td>J</td>
+            <td>K</td>
+            <td>L</td>
+        </tr>
+        <tr>
+            <td colspan="4">M</td>
         </tr>
     </table>
 </body>
