--- a/ex016/index.html
+++ b/ex016/index.html
@@ -26,14 +26,14 @@
     </style>
 </head>
 <body>
-    <h1>Faça uma escolha</h1>
+    <h1 style="color:purple;">Faça uma escolha</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sit, minima eius ab fugiat cumque? In, nemo obcaecati, suscipit necessitatibus velit illo corporis magnam qui excepturi animi modi. Harum, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio placeat nulla delectus at omnis dolorem, saepe voluptate quae ipsum id esse atque cum accusamus similique ut a iure vero nobis?</p>
     <div class="ancoras">
         <a href="./Pags/pag001.html" target="frame">Página 1</a> <br>
         <a href="./Pags/pag002.html" target="frame">Página 2</a> <br>
         <a href="./Pags/pag003.html" target="frame">Página 3</a>
     </div>
-    <iframe name="frame" src="" frameborder="1">
+    <iframe name="frame" src="" frameborder="1" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sit, minima eius ab fugiat cumque? In, nemo obcaecati, suscipit necessitatibus velit illo corporis magnam qui excepturi animi modi. Harum, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio placeat nulla delectus at omnis dolorem, saepe voluptate quae ipsum id esse atque cum accusamus similique ut a iure vero nobis? </p> <img style='width:100px; display:block; margin:auto;' src='manga.png'>">
         <p>Seu navegador não é compatível com isso</p>
     </iframe>
 </body>
