--- a/Projetos/projeto-redes-sociais/index.html
+++ b/Projetos/projeto-redes-sociais/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Redes Sociais</title>
 </head>
 <body>
-    
+    <main>
+        <section id="celular">
+            <iframe name="tela" src="./pag001.html" frameborder="0"></iframe>
+        </section>
+        <aside>
+            <ul>
+                <li><a href="./pag001.html" target="tela"><img src="./imagens/logo-home.jpg" alt=""></a></li>
+                <li><a href="./pag002.html" target="tela" ><img src="./imagens/logo-facebook.jpg" alt=""></a></li>
+                <li><a href=""><img src="./imagens/logo-instagram.jpg" alt=""></a></li>
+                <li><a href=""><img src="./imagens/logo-twitter.jpg" alt=""></a></li>
+                <li><a href=""><img src="./imagens/logo-youtube.jpg" alt=""></a></li>
+                <li><a href=""><img src="./imagens/logo-github.jpg" alt=""></a></li>    
+            </ul>
+        </aside>
+    </main>   
 </body>
 </html>
