--- a/Projetos/projeto-redes-sociais/index.html
+++ b/Projetos/projeto-redes-sociais/index.html
@@ -17,10 +17,10 @@
             <ul>
                 <li><a href="./pag001.html" target="tela"><img src="./imagens/logo-home.jpg" alt=""></a></li>
                 <li><a href="./pag002.html" target="tela" ><img src="./imagens/logo-facebook.jpg" alt=""></a></li>
-                <li><a href=""><img src="./imagens/logo-instagram.jpg" alt=""></a></li>
-                <li><a href=""><img src="./imagens/logo-twitter.jpg" alt=""></a></li>
-                <li><a href=""><img src="./imagens/logo-youtube.jpg" alt=""></a></li>
-                <li><a href=""><img src="./imagens/logo-github.jpg" alt=""></a></li>    
+                <li><a href="./pag003.html" target="tela"><img src="./imagens/logo-instagram.jpg" alt=""></a></li>
+                <li><a href="./pag004.html" target="tela"><img src="./imagens/logo-twitter.jpg" alt=""></a></li>
+                <li><a href="./pag005.html" target="tela"><img src="./imagens/logo-youtube.jpg" alt=""></a></li>
+                <li><a href="./pag006.html" target="tela"><img src="./imagens/logo-github.jpg" alt=""></a></li>    
             </ul>
         </aside>
     </main>   
