--- a/Projetos/projeto-redes-sociais/index.html
+++ b/Projetos/projeto-redes-sociais/index.html
@@ -14,7 +14,7 @@
             <iframe name="tela" src="./pag001.html" frameborder="0"></iframe>
         </section>
         <aside>
-            <ul>
+            <ul class="giflist">
                 <li><a href="./pag001.html" target="tela"><img src="./imagens/logo-home.jpg" alt=""></a></li>
                 <li><a href="./pag002.html" target="tela" ><img src="./imagens/logo-facebook.jpg" alt=""></a></li>
                 <li><a href="./pag003.html" target="tela"><img src="./imagens/logo-instagram.jpg" alt=""></a></li>
