--- a/Projetos/projeto-lista-de-gifs/index.html
+++ b/Projetos/projeto-lista-de-gifs/index.html
@@ -16,7 +16,7 @@
             <a href="#" target="_blank">
             <img class="logo" src="./imagens/logo-gato.png" alt="">
         </a>
-        <button class="botaotrocatema">
+        <button class="botaotrocatema" onclick="TrocaTema()">
             <img class="tema" src="./imagens/sun.png" alt="">
         </button>
         </div>
@@ -66,5 +66,6 @@
             </li>
         </ul>
     </main>
+    <script src="./script.js"></script>
 </body>
 </html>
