--- a/Projetos/projeto-lista-de-gifs/index.html
+++ b/Projetos/projeto-lista-de-gifs/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Lista de Gifs</title>
 </head>
-<body>
+<body class="item">
     <!-- #908F8E cinza
     #D7E2EC branco
     -->
     <header>
         <div class="container">
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/gatinhoscajueiros/" target="_blank">
             <img class="logo" src="./imagens/logo-gato.png" alt="">
         </a>
         <button class="botaotrocatema" onclick="TrocaTema()">
@@ -24,44 +24,52 @@
     </header>
     <main>
         <ul class="listagifs">
-            <li>
+            <li class="item">
                 <span>lorem</span>
                 <img class="gif" src="./imagens/boneco-pc.gif" alt=""> 
+                <span class="tipo">lorem</span>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
-                <img class="gif"  src="./imagens/coelho-cenoura.gif" alt=""> 
+                <img class="gif"  src="./imagens/coelho-cenoura.gif" alt="">
+                <span class="tipo">lorem</span> 
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
                 <img class="gif"  src="./imagens/dog-caixa.gif" alt=""> 
+                <span class="tipo">lorem</span>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
-                <img class="gif"  src="./imagens/gato-fofo.gif" alt=""> 
+                <img class="gif"  src="./imagens/gato-fofo.gif" alt="">
+                <span class="tipo">lorem</span> 
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
-                <img style="height:150px;"  class="gif" src="./imagens/gato-olhao.gif" alt=""> 
+                <img style="height:150px;"  class="gif" src="./imagens/gato-olhao.gif" alt="">
+                <span class="tipo">lorem</span> 
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
-                <img style="height:150px;" class="gif"  src="./imagens/homem.gif" alt=""> 
+                <img style="height:150px;" class="gif"  src="./imagens/homem.gif" alt="">
+                <span class="tipo">lorem</span> 
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
-                <img style="height:150px;" class="gif"  src="./imagens/pato.gif" alt=""> 
+                <img style="height:150px;" class="gif"  src="./imagens/pato.gif" alt="">
+                <span class="tipo">lorem</span> 
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
-            <li>
+            <li class="item">
                 <span>lorem</span>
-                <img class="gif"  src="./imagens/simpson-dinheiro.gif" alt=""> 
+                <img class="gif"  src="./imagens/simpson-dinheiro.gif" alt="">
+                <span class="tipo">lorem</span> 
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui dignissimos molestiae perferendis, deleniti temporibus voluptatum minus placeat officiis quae cumque eligendi nemo aliquid recusandae, laborum vero impedit delectus sed dicta.</p>              
             </li>
         </ul>
